--- a/virtual-folio/html/index.html
+++ b/virtual-folio/html/index.html
@@ -281,6 +281,7 @@
     </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 
+<script src="../assets/js/jquery-3.5.1.min.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
