--- a/virtual-folio/html/index.html
+++ b/virtual-folio/html/index.html
@@ -33,30 +33,49 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <style>
-    /* Ensure images are responsive */
-    .img-place img {
-      max-width: 100%;
-      height: auto;
-      display: block; /* This removes any default inline spacing */
-    }
+    /* CSS for Responsive Images */
+.img-place img {
+  max-width: 100%;
+  height: auto;
+  display: block; /* This ensures the image does not have extra space below it as it would with inline elements */
+}
 
-    /* Media Query for devices with width up to 768px (typical breakpoint for mobile devices) */
-    @media (max-width: 768px) {
-      .img-place {
-        /* Your specific styles for mobile devices go here */
-      }
+/* Flexbox setup for the container if not already present */
+.img-place {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-      /* Example: Adjust the padding and margin for items on mobile */
-      .col-md-6, .col-lg-4, .col-xl-3 {
-        padding: 0;
-        margin-bottom: 15px;
-      }
+/* Media Queries for different breakpoints */
+@media only screen and (max-width: 1200px) {
+  /* Adjustments for small desktops */
+}
 
-      /* Further mobile-specific styles can be added here */
-    }
+@media only screen and (max-width: 992px) {
+  /* Adjustments for tablets */
+}
 
-    /* Additional styles for Bootstrap classes if needed */
-    /* ... */
+@media only screen and (max-width: 768px) {
+  /* Adjustments for landscape phones */
+}
+
+@media only screen and (max-width: 576px) {
+  /* Adjustments for portrait phones */
+
+  /* Ensuring the image containers take full width and have some padding */
+  .img-place {
+    width: 100%; /* Make sure the container takes the full width */
+    padding: 0 15px; /* Add some padding so it doesn't touch the edges */
+  }
+
+  /* If captions are not needed on mobile, they can be hidden */
+  .img-caption {
+    display: none;
+  }
+}
+
   </style>
 </head>
 
